Feat(WIT-23): added logic for retrieving cars
